KAFKA-18494-3: minor